Fixed horizontal scrollbar. I think I'm done.

--- a/react-catalog/my-app/src/App.css
+++ b/react-catalog/my-app/src/App.css
@@ -1,5 +1,6 @@
 #root {
   margin-bottom: auto;
+  overflow-x: hidden;
 }
 
 nav {
@@ -11,11 +12,13 @@ nav {
 nav ul {
   max-width: 1280px;
   margin: 0 auto;
+  padding: 0 2em;
 }
 
 #root div.container {
   max-width: 1280px;
   margin: 0 auto;
+  padding: 0 2em;
 }
 
 .logo {
